# fantapy

./: .gitignore  README.md  concept.txt  index.html  main.py  pyproject.toml  requirements.txt
backend/models/: auction.py  player.py
core/: auction.py  auctioneer.py  bid.py  caller.py  events.py  team.py
fantapy-web/: package-lock.json  package.json
fantapy-web/src/: App.jsx
fantapy-web/src/pages/: AuctionRoom.jsx
services/: auction_manager.py  selection_strategies.py
services/calling_strategy/: base.py  sequential_calling_strategy.py  system_random_any_role.py  system_random_by_role.py
services/slot_strategies/: base.py  default.py
src/: App.jsx
src/api/: auction_room.py  main.py  models.py  remote_participant.py
src/api/routers/: auctions.py  participants.py
src/api/ws/: manager.py
src/console/: main.py
src/core/: auction.py  auction_factory.py  auction_factory_registry.py  auctioneer.py  bid.py  bidder.py  bidding_strategies.py  budget_strategies.py  caller.py  config-schema.json  config_option.py  enums.py  events.py  interfaces.py  market_rules.py  ownership_policies.py  participant.py  player_pool.py  player_selection_strategies.py  team.py  turn.py  user.py
src/core/auctions/: team_driven_auction.py
src/core/calling_strategy/: base.py  sequential_calling_strategy.py
src/core/player_pool_builders/: base.py  role_sequential_pool_builder.py
src/core/slot_strategies/: default.py
src/core/team_building_strategies/: base.py  fixed_max_strategy.py  (+2 more)
src/frontend/: index.html
tests/: sample_payload.json  test_auction.py
