[tool.poetry]
name = "fantauction"
version = "0.1.0"
description = "Fantasy football auction manager with FastAPI and WebSocket"
authors = ["Tuonome <tuomail@example.com>"]
readme = "README.md"
packages = [{ include = "fantauction", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
black = "^24.0"
isort = "^5.12.0"
mypy = "^1.10"
ruff = "^0.5"
